assets/css/style.css
/*font import merriweather*/
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wdth,wght@0,18..144,87.5,300..900;1,18..144,87.5,300..900&display=swap');


/*font variations 300 to 900*/
.merriweather-font-value {
    font-family: "Merriweather", serif;
    font-weight: 300;
    font-style: normal;
    font-variation-settings:
        "wdth" 100;
}

/*body*/
body {
    margin: 0;
    padding: 0;
    font-family: "Merriweather", serif;
    font-weight: 300;
    color: #ffffff;
    background-image: url("../../assets/images/background3.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-color: #2d2d2e;
    min-height: 100%;
}

/* used to change text to color orange for headings*/
.color-orange {
    color: #ff6600;
}

/*.wrapper settings*/
.wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    flex-wrap: wrap;
    margin-bottom: 10vh;
}

/*text box alignment of text for the top to allow margin for nav*/
.wrapper .text-box-top {
    text-align: center;
    margin-bottom: 20px;
    margin-top: 100px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 10px;
    background-color: #232429;
}

/*general text box alignment of text*/
.wrapper .text-box {
    text-align: center;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #232429;
    box-shadow: 0 1px 3px #00020b;
    margin: 20px 20px 20px 20px;
    border-radius: 10px;
    max-width: 100%;
}

/*image and iframe settings*/
.wrapper img {
    justify-content: center;
    align-items: center;
    padding: 10px 10px 10px 10px;
    border-radius: 10px;
    max-width:80%;
    height:auto;
}

.wrapper iframe {
    padding: 10px 10px 10px 10px;
    justify-content: center;
    align-items: center;
    max-width: 80%;
    height: auto;
    border-radius: 10px;
}

/*footer*/
footer {
    background-color: #ff6600;
    text-align: center;
    height: 180px;
    width: 100vw;
    padding-top: 5px;
}

/*footer images for social media links*/
footer img {
    width: 50px;
    height: 50px;
    margin: 10px;
}

/*footer paragraph*/
footer p {
    color: #0e0e0e;
    font-weight: bold;
}

footer p a {
    color: #0e0e0e;
    text-decoration: none;
    font-weight: bold;
}

/*footer email address hover effect*/
footer p a:hover {
    color: #ffffff;
    background-color: #232429
}

/*..................landing page styles..................*/
/* main h1 title on landing page*/
.home-center h1 {
    text-align: center;
    font-size: 2.5rem;
    font-weight: bold;
    margin-bottom: 6vh;
    margin-top: 6vh;
    padding-left: 5px;
    padding-right: 5px;
}

/*first p element on landing page*/
.home-center .p1 {
    text-align: center;
    font-size: 1.5rem;
    margin-top: 28vh;
    padding-left: 5px;
    padding-right: 5px;
}

/*second p element on landing page*/
.home-center .p2 {
    text-align: center;
    font-size: 1.5rem;
    margin-bottom: 28vh;
    padding-left: 5px;
    padding-right: 5px;
}

/*.............................sign up page styles.............................*/

/*sign up form container*/
.wrapper-form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    background-color: #2d2d2e;
    border-radius: 10px;
    margin: 20px 20px 20px 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 5px;
    padding-right: 5px;
}

.wrapper-form button {
    border-radius: 10px;
    font-weight: bold;
    color: #0e0e0e;
    background-color: #ff6600;
}

/*..............................about keto page.................................*/
.wrapper .text-box-top {
    margin-top: 100px;
}



/*.............................................recipe section.............................................*/
.recipe-image {
    max-width: 90vw;
    border-radius: 10px;
    margin: 0;
    padding: 10px 10px 10px 10px;
}

.wrapper2 {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    flex-wrap: wrap;
}

.wrapper2 .style {
    text-align: center;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #232429;
    box-shadow: 0 1px 3px #00020b;
    margin: 10px 10px 10px 10px;
    border-radius: 10px;
    max-width: 100%;
}

/*..............................................media queries.............................................*/
/* media query for medium screens min 500px*/
@media only screen and (min-width: 500px) {

    /*increase font size and margin for medium screens home page*/
    .home-center h1 {
        font-size: 4rem;
        margin-top: 15vh;
    }

    /* image alignment and i frame*/
    .wrapper img {
        padding:10px 10px 10px 10px;
        justify-content: center;
        align-items: center;
        max-width: 90%;
    }

    .wrapper iframe {
        padding: 10px 10px 10px 10px;
        max-width: 100%;
        height:auto;
    }
}

/*media query for larger screens min 1025px*/
@media only screen and (min-width: 1025px) {

    /*....................increase font size and margin for larger screens home page..............................*/
    .home-center h1 {
        font-size: 8rem;
        margin-top: 20vh;
    }

    .home-center .p1 {
        margin-top: 20vh;
        margin-bottom: 10vh;
    }

    .home-center .p2 {
        margin-bottom: 25vh;
    }

    /*...................sign up form container............................*/
    .wrapper-form {
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
        background-color: #2d2d2e;
        border-radius: 10px;
        margin: 50px 50px 50px 50px;
        padding-top: 20px;
        padding-bottom: 20px;
        padding-left: 5px;
        padding-right: 5px;
    }

    /*...................flex for larger screens about keto page...................*/
    .wrapper {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
    }


    .wrapper div {
        flex: 1 1 45%;
    }

    .wrapper div img {
        padding: 20px 20px 20px 20px;
        margin: 25px 25px 25px 25px;
        max-width: 95%;
        justify-content: center;
        align-items: center;
    }

    .wrapper iframe {
       padding:10px 10px 10px 10px;
        width: 40vw;
        height: 50vh;
    }

    /* flex for larger screens recipe page*/
    .wrapper2 {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        flex-wrap: wrap;

    }

    .wrapper2 div {
        flex: 1 1 45%;

    }

    .wrapper2 img {
        max-width: 90%;
        justify-content: center;
        align-items: center;
        padding: 25px 25px 25px 25px;
    }
}

/* <-- Add this closing bracket to end the previous @media block */
/*media query for min width 1600px*/
@media only screen and (min-width: 1600px) {

    /*home page*/
    .home-center .p2 {
        margin-bottom: 35vh;
    }

    /*about keto page*/
    .wrapper img {
        justify-content: center;
        align-items: center;
        max-width: 95%;
        margin-left: 60px;
        margin-right: 60px;
    }

    .wrapper {
        font-size: 1.6rem;
        margin-left: 50px;
        margin-right: 50px;
    }

    /*recipe page*/
    .wrapper2 {
        font-size: 1.6rem;
        margin-left: 50px;
        margin-right: 50px;
    }

    /*sign up form container*/
    .wrapper-form {
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
        background-color: #2d2d2e;
        border-radius: 10px;
        margin: 50px 50px 50px 50px;
        padding-top: 20px;
        padding-bottom: 20px;
        padding-left: 5px;
        padding-right: 5px;
        font-size: 1.6rem;
    }
}

/* media query for very large screens min 2000px*/
@media only screen and (min-width: 2000px) {

    /*home page*/
    .home-center .p2 {
        margin-bottom: 30vh;
    }

    .home-center h1 {
        font-size: 10rem;
        margin-top: 15vh;
    }

    .home-center .p1 {
        font-size: 2rem;
        margin-top: 30vh;
    }

    /*about keto page*/
    .wrapper img {
        justify-content: center;
        align-items: center;
        max-width: 95%;
        margin-left: 80px;
        margin-right: 80px;
    }

    .wrapper {
        font-size: 2rem;
        margin-left: 100px;
        margin-right: 100px;
        margin-bottom: 15vh;
    }

    /*recipe page*/
    .wrapper2 {
        font-size: 2rem;
        margin-left: 100px;
        margin-right: 100px;
    }

    /*sign up form container*/
    .wrapper-form {
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
        background-color: #2d2d2e;
        border-radius: 10px;
        margin: 50px 50px 50px 50px;
        padding-top: 20px;
        padding-bottom: 20px;
        padding-left: 5px;
        padding-right: 5px;
        font-size: 2rem;
    }
}

